# mixer-prove-server

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
docs/: readme_mixerProveServer.md
lib/: Cargo.toml
lib/src/: lib.rs  mix.rs  utils.rs
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml
